[tool.poetry]
name = "line-selfbot-chrline"
version = "0.1.0"
description = ""
authors = ["mopeneko <mopeneko@lem0n.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "python ./line_selfbot_chrline/main.py"
format = "black --fast ."
