[tool.poetry]
name = "line-selfbot-chrline"
version = "0.1.0"
description = ""
authors = ["mopeneko <mopeneko@lem0n.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chrline = "^2.5.14"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
